# gtk-rs-fuzzer

./: .gitignore  Cargo.toml  README.md
Project/: .rustfmt.toml  Cargo.toml  settings.txt2
Project/src/: create_objects.rs  helpers.rs  main.rs  ziemniak.rs
src/: bottom_text.rs  creating_enum.rs  creating_functions.rs  creating_implementation.rs  main.rs  settings.rs
