[package]
name = "crash_thing"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2021"
description = "Crash project"
license = "MIT"
version = "0.1.0"

[dependencies]
#gdk4 = "0.4.6"
#gio = "0.15.5"
#glib = "0.15.5"
#gtk4 = "0.4.6"

gdk4 = {git = "https://github.com/gtk-rs/gtk4-rs"}
gio = {git = "https://github.com/gtk-rs/gtk-rs-core"}
glib = {git = "https://github.com/gtk-rs/gtk-rs-core"}
gtk4 = {git = "https://github.com/gtk-rs/gtk4-rs"}


rand = "0.8.4"

